test/good/generators/generic02.px

func* f<T>() T def
    yield 5
    yield 7/2
    yield -3.0

for x in f() do
    print x
