test/bad/generics/print01.px

func f<T>(T x) def
    print x

f(write)
